# cpho-phase2

./: .gcloudignore  .gitignore  .product.yaml  .sops.yaml  CHANGELOG.md  README.md  asset-manifest.json  cloudbuild.yaml  codecov.yml  db.sqlite3  docker-compose.cloud-build-test-env.yaml  docker-compose.run-format-checks.yaml  docker-compose.run-tests.yaml  docker-compose.yaml  docker-compose.yml  envoy.yaml  index.html  kustomization.yaml  manage.py  pyproject.toml  requirements.txt  requirements_dev.txt
server/: .coverage  .coveragerc  .dockerignore  .env.dev  .env.dev-public  Dockerfile  Dockerfile.dev-management  Dockerfile.prod  README.md  cloudbuild.yaml  db.sqlite3  dev-db-init.sh  entrypoint.format.py  entrypoint.prod.py  entrypoint.prod.sh  entrypoint.sh  entrypoint.test.py  gunicorn.conf.py  logfile  manage.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_formatting.txt  server.py  sshd_config
server/.github/: dependabot.yml
server/api/: dataloaders.py  schema.py  types.py  util.py  views.py
server/cpho/: admin.py  apps.py  constants.py  forms.py  hotfix_script.py  jinja_helpers.py  mapping_util.py  model_factories.py  models.py  queries.py  rules.py  schema.py  services.py  text.py  translations.py  urls.py  util.py  views.py
server/cpho/fixtures/: dimension_lookups.yaml  indicator_directory_dump.yaml  indicator_dump.yaml  indicator_dump_2024-05_07.yaml  indicator_minimal.json  indicators.yaml  periods.yaml
server/cpho/jinja2/: _standard_form.jinja2  base.jinja2  breadcrumb_macros.jinja2  cpho_macros.jinja2  generic_macros.jinja2  login.jinja2  review_data.jinja2  review_indicator_metadata.jinja2
server/cpho/migrations/: 0001_initial.py  0002_alter_indicatordatum_value_and_more.py  0002_alter_period_options_remove_periodhistory_name_en_and_more.py  0002_exportedfile.py  0002_rename_indicator_indicator_name_and_more.py  0003_alter_indicatordatum_unique_together.py  0003_delete_exportedfile_rename_indicator_indicator_name_and_more.py  0004_indicatordatum_hso_approved_and_more.py  0004_remove_indicatordatumhistory_approved_and_more.py  0005_alter_dimensiontypehistory_options_and_more.py  0005_rename_approved_indicatordatumhistory_is_hso_approved_and_more.py  0006_indicatordatasubmission.py  0006_location_rename_sub_category_indicator_topic_and_more.py  0006_phacorg_phacorgrole.py  0006_phacorg_phacorgrole_indicator_phacorg_and_more.py  0007_alter_dimensionvalue_name_en_and_more.py  0007_indicator_phacorg_indicatorhistory_phacorg.py  0007_rename_sub_category_indicator_topic_and_more.py  0008_load_period_fixtures.py  0008_rename_sub_category_indicator_topic_and_more.py  0009_indicator_relevant_dimensions_and_more.py  0010_alter_indicatordatum_unique_together_and_more.py  0010_user_name.py  0011_merge_20231120_1253.py  0012_benchmarking_countries_benchmarkinghistory_and_more.py  0012_benchmarking_country_benchmarkinghistory_and_more.py  0013_indicator_general_footnotes_and_more.py  0014_alter_benchmarking_unique_together_benchmarking_unit_and_more.py  0014_indicatordirectory_indicatordirectoryuseraccess_and_more.py  0014_trendanalysis_trendanalysishistory.py  0015_alter_benchmarking_standard_deviation_and_more.py  0015_remove_phacorgrole_phac_org_remove_phacorgrole_user_and_more.py  0016_indicatordirectory_indicatordirectorylink_and_more.py  0016_trendanalysis_trendanalysishistory.py  0017_indicatordirectory_indicatordirectorylink_and_more.py  (+34 more)
server/deploy/: README.md  gcloud_cleanup.sh  gcloud_env_vars.sh  gcloud_init_setup.sh  make_cloud_build_env_file.sh  make_prod_env_file.sh
server/kubernetes/: database-deployment.yaml  database-namespace.yaml  database-service.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  server-deployment.yaml  server-namespace.yaml  server-service.yaml  virtual-service.yaml
server/server/: asgi.py  auth_backend.py  config_util.py  fields.py  form_util.py  healthcheck.py  logging_util.py  logging_utils.py  middleware.py  model_util.py  monkey_patch_for_testing.py  open_telemetry_util.py  rules_framework.py  settings.py  settings_util.py  urls.py  wsgi.py
server/static/: cpho.css
server/staticfiles/: cpho.css  staticfiles.json
server/tests/: conftest.py  test_basics.py  test_benchmarking_permissions.py  test_changelog.py  test_config_util.py  test_custom_age_group_sort.py  test_data_submission.py  test_export.py  test_healthcheck.py  test_indicator_crud.py  test_infobase_export.py  test_jinja_helpers.py  test_logging_util.py  test_logging_utils.py  test_manual_benchamrking_input.py  test_manual_data_input.py  test_manual_trend_analysis_input.py  test_metadata_submission.py  test_models.py  test_permissions.py  test_progress_bar.py  test_regex_pattterns.py  test_relevant_dimensions.py  test_schema_basics.py  test_settings_util.py  test_soft_delete.py  test_sso_behaviour.py  test_submission.py  test_submission_statuses.py  test_upload.py  test_upload_preview.py  test_user_management.py  test_versioning.py  utils_for_tests.py
(+482 files in other folders)
